fix(header-nav): 官网头部bug 1. 头部z-index被背景z-index覆盖（具体原因不明,推测是头部使用绝对定位）

--- a/public/static/chhcollege/css/index.css
+++ b/public/static/chhcollege/css/index.css
@@ -2,7 +2,7 @@
     height: 630px;
     overflow: hidden;
     position: relative;
-    z-index: 8;
+    z-index: 0;
     width: 100%;
 }
 
